Fixing Score Panel Alignment

--- a/css/app.css
+++ b/css/app.css
@@ -124,9 +124,8 @@ h1 {
 
 .score-panel {
     text-align: left;
-    width: 345px;
+    width: 500px;
     margin-bottom: 10px;
-    color: #FFF;
 }
 
 .score-panel .stars {
@@ -134,21 +133,25 @@ h1 {
     padding: 0;
     display: inline-block;
     margin: 0 5px 0 0;
-    color: #FFF;
 }
 
 .score-panel .stars li {
     list-style: none;
     display: inline-block;
-    color: #FFF;
 }
 
 .score-panel .restart {
     float: right;
     cursor: pointer;
-    color: #FFF;
+    margin-left: 50px;
+
 }
 
+/* Added a CSS style for the timer */
+.score-panel .timer {
+    margin-left: 80px;
+}
+/*end*/
 .fade-out {
   opacity: 0;
   visibility: hidden;
@@ -172,10 +175,10 @@ h1 {
             from{top:-300px;opacity:0} 
             to{top:0;opacity:1}
 }
-
+/*Popup modal
+*/
 #popupmodal {
-/*    position: absolute;
-*/    position: fixed;
+    position: fixed;
     text-align: center;
     z-index:3;
     z-index: 1000005;
